k8s_configuration/frontend/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: frontend-rollout
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: prakashghorpade2001/memories-notes-app-frontend:v1.0.60
        ports:
        - containerPort: 3000

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        startupProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

  strategy:
    canary:

      stableService: frontend-stable-service

      canaryService: frontend-canary-service

      trafficRouting:
        alb:
          ingress: memoris-notes-ingress-frontend
          servicePort: 3001

      steps:

        - setWeight: 10
        - pause:
            duration: 10m

        - setWeight: 25
        - pause:
            duration: 10m

        - setWeight: 50
        - pause:
            duration: 10m

        - setWeight: 75
        - pause:
            duration: 10m

        - setWeight: 100
