k8s_configuration/frontend/base/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable-service
  namespace: memories-notes-app-namespace
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
