k8s_configuration/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memoris-notes-ingress-frontend
  namespace: memories-notes-app-namespace

spec:
  ingressClassName: nginx

  rules:
    - host: prakashghorpade.shop
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:  
            service:
              name: frontend-stable-service
              port:
                number: 3000
